--- a/code/part1/Sithabiseni-Mtshali-Windows-instance.yml.yaml
+++ b/code/part1/Sithabiseni-Mtshali-Windows-instance.yml.yaml
@@ -14,21 +14,47 @@ Parameters:
   SecurityGroupIds:
     Type: List<AWS::EC2::SecurityGroup::Id>
     Description: Select one or more security groups for the instance
-  ExistingRoleName:
-    Type: String
-    Description: Name of the existing IAM role to use
   LatestWindowsAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Description: Path to the latest Windows AMI
     Default: /aws/service/ami-windows-latest/Windows_Server-2019-English-Full-Base
 
 Resources:
+  WindowsInstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: WindowsInstanceRole
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ec2.amazonaws.com
+            Action: sts:AssumeRole
+      DeletionPolicy: Delete
+
   WindowsInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
       Path: /
       Roles:
-        - !Ref ExistingRoleName
+        - Ref: WindowsInstanceRole
+
+  WindowsInstanceRolePolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: !Sub "Windows-client-${AWS::StackName}"
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - s3:Get*
+              - s3:List*
+            Resource: "*"
+      Roles:
+        - Ref: WindowsInstanceRole
+      DeletionPolicy: Delete
 
   WindowsInstance:
     Type: AWS::EC2::Instance
