--- a/code/part1/Sithabiseni-Mtshali-Windows-instance.yml.yaml
+++ b/code/part1/Sithabiseni-Mtshali-Windows-instance.yml.yaml
@@ -1,16 +1,16 @@
-AWSTemplateFormatVersion: "2010-09-09"
-Description: "Template for provisioning a Windows EC2 instance in AWS"
-
+AWSTemplateFormatVersion: '2010-09-09'
+Description: This template provisions a Windows EC2 instance in the provided VPC with the required networking infrastructure and security groups.
 Parameters:
+  EnvironmentName:
+    Type: String
+    Default: DE-Extract
+    Description: A string that will be prefixed onto each resource created in the template.
+  VpcId:
+    Type: AWS::EC2::VPC::Id
+    Description: Select the VPC for the instance
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Select the key pair to decrypt the Windows instance password
-  VPC:
-    Type: AWS::EC2::VPC::Id
-    Description: Select the VPC for the instance
-  Subnet:
-    Type: AWS::EC2::Subnet::Id
-    Description: Select the public subnet for the instance
   SecurityGroupIds:
     Type: List<AWS::EC2::SecurityGroup::Id>
     Description: Select one or more security groups for the instance
@@ -31,7 +31,6 @@ Resources:
             Principal:
               Service: ec2.amazonaws.com
             Action: sts:AssumeRole
-      DeletionPolicy: Delete
 
   WindowsInstanceProfile:
     Type: AWS::IAM::InstanceProfile
@@ -54,7 +53,6 @@ Resources:
             Resource: "*"
       Roles:
         - Ref: WindowsInstanceRole
-      DeletionPolicy: Delete
 
   WindowsInstance:
     Type: AWS::EC2::Instance
@@ -63,14 +61,18 @@ Resources:
       KeyName: !Ref KeyName
       InstanceType: t2.micro
       SecurityGroupIds: !Ref SecurityGroupIds
-      SubnetId: !Ref Subnet
+      SubnetId: !Ref VpcId
       IamInstanceProfile: !Ref WindowsInstanceProfile
       Tags:
         - Key: Name
-          Value: DE-Extract-Windows-Instance
+          Value: !Ref EnvironmentName
 
 Outputs:
   WindowsInstanceID:
+    Description: "ID of the Windows EC2 instance"
+    Value: !Ref WindowsInstance
+    Export:
+      Name: "WindowsInstanceID"
     Description: "ID of the Windows EC2 instance"
     Value: !Ref WindowsInstance
     Export:
