--- a/code/part1/Sithabiseni-Mtshali-Windows-instance.yml.yaml
+++ b/code/part1/Sithabiseni-Mtshali-Windows-instance.yml.yaml
@@ -41,7 +41,7 @@ Resources:
               - s3:Get*
               - s3:List*
             Resource: "*"
-
+    DeletionPolicy: Delete
   WindowsInstance:
     Type: AWS::EC2::Instance
     Properties:
